# mc-renderer

./: .gitignore  CMakeLists.txt  README.md  download_textures.ps1  download_textures.sh
cmake/: FindLibZip.cmake  FindSDL2.cmake
inc/: json.hpp
res/blocks/: bedrock.json  blue_flower.json  coal_ore.json  diamond_ore.json  dirt.json  fern.json  gold_ore.json  grass.json  gravel.json  iron_ore.json  orange_flower.json  red_flower.json  sand.json  spruce_leaves.json  spruce_wood.json  stone.json  white_flower.json  yellow_flower.json
res/textures/blocks/: blocks.txt
shaders/: block-shadow.fs.glsl  block-shadow.gs.glsl  block-shadow.vs.glsl  block.fs.glsl  block.vs.glsl  caustics.cs.glsl  debug.fs.glsl  debug.vs.glsl  godrays-blur.glh  godrays-gen.fs.glsl  godrays-hblur.fs.glsl  makefile  post.cs.glsl  post.fs.glsl  post.vs.glsl  sky.fs.glsl  sky.vs.glsl  star.fs.glsl  star.vs.glsl  ui.fs.glsl  ui.vs.glsl  water-post.fs.glsl  water-tess.vs.glsl  water.fs.glsl  water.tcs.glsl  water.tes.glsl  water.vs.glsl
shaders/inc/: atmosphere.glh  depth.glh  dlight.glh  dlshadow.glh  light.glh  perlin.glh  rendersettings.glh  water-vertex.glh  water.glh  wind.glh
src/: aaboundingbox.cpp  aaboundingbox.h  abstract.h  arguments.cpp  arguments.h  devmenumanager.cpp  devmenumanager.h  game.cpp  game.h  inputstate.cpp  inputstate.h  keys.cpp  keys.h  loadcontext.cpp  loadcontext.h  main.cpp  plane.cpp  plane.h  poolallocationtracker.cpp  poolallocationtracker.h  ray.cpp  ray.h  settings.cpp  settings.h  stb_image.cpp  timemanager.cpp  timemanager.h  utils.cpp  utils.h
src/blocks/: blockstexturemanager.cpp  blockstexturemanager.h  blocktexconfig.h  blocktextures.cpp  blocktextures.h  blocktype.cpp  blocktype.h  ids.h  registerblocktypes.cpp  registerblocktypes.h  setcustommeshes.cpp  setcustommeshes.h  sides.cpp  sides.h  texturepack.cpp  texturepack.h
src/profiling/: frameprofiler.cpp  frameprofiler.h  profiling.cpp  profiling.h  profilingdata.cpp  profilingdata.h  scopedtimer.cpp  scopedtimer.h  timertypes.h
src/rendering/: blendstates.cpp  blendstates.h  causticstexture.cpp  causticstexture.h  chunkrenderlist.cpp  chunkrenderlist.h  chunkvisibilitycalculator.cpp  chunkvisibilitycalculator.h  chunkvisibilitygraph.cpp  chunkvisibilitygraph.h  constants.h  dirlight.h  fbformats.h  framebuffer.cpp  framebuffer.h  frustum.cpp  frustum.h  postprocessor.cpp  postprocessor.h  regionrenderlist.cpp  regionrenderlist.h  renderer.cpp  renderer.h  rendererframebuffer.cpp  rendererframebuffer.h  rendersettingsbuffer.cpp  rendersettingsbuffer.h  setlayouts.cpp  setlayouts.h  skyrenderer.cpp  skyrenderer.h  starrenderer.cpp  starrenderer.h  texture2d.cpp  texture2d.h  vertex.cpp  vertex.h  viewprojection.h  windnoiseimage.cpp  windnoiseimage.h
src/rendering/meshes/: flowermeshprovider.cpp  flowermeshprovider.h  icustommeshprovider.h
src/rendering/regions/: buildchunkmesh.cpp  buildchunkmesh.h  buildregionmesh.cpp  buildregionmesh.h  chunkbufferallocator.cpp  chunkbufferallocator.h  chunkmesh.cpp  chunkmesh.h  chunkuploader.cpp  chunkuploader.h  meshbuilder.cpp  meshbuilder.h  meshextents.h  regiondatabuffer.cpp  regiondatabuffer.h  regionmesh.cpp  regionmesh.h  regionuploader.cpp  regionuploader.h  watermesh.cpp  watermesh.h  watermeshbuilder.cpp  watermeshbuilder.h  watervertex.h
src/rendering/shaders/: blockshader.cpp  blockshader.h  debugshader.cpp  debugshader.h  godraysblurshader.cpp  godraysblurshader.h  godraysgenshader.cpp  godraysgenshader.h  postprocessshader.cpp  postprocessshader.h  shader.cpp  shader.h  shadermodules.cpp  shadermodules.h  skyshader.cpp  skyshader.h  waterpostshader.cpp  waterpostshader.h  watershader.cpp  watershader.h
src/rendering/shaders/water/: waterpostshader.cpp  waterpostshader.h  watershader.cpp  watershader.h
src/rendering/shadows/: cascadedshadowmapper.cpp  cascadedshadowmapper.h  directionalshadowvolume.cpp  directionalshadowvolume.h  shadowvolumemesh.cpp  shadowvolumemesh.h
src/ui/: devcontrols.cpp  devcontrols.h  devmenu.cpp  devmenu.h  devmenubar.cpp  devmenubar.h  font.cpp  font.h  profilingpane.cpp  profilingpane.h  uidrawlist.cpp  uidrawlist.h  uigraphicscontext.cpp  uigraphicscontext.h  uiimage.cpp  uiimage.h  uishader.cpp  uishader.h
src/vulkan/: bufferpool.cpp  bufferpool.h  bufferpoolset.cpp  bufferpoolset.h  commandbuffer.cpp  commandbuffer.h  descriptorset.cpp  descriptorset.h  destroy.cpp  destroy.h  func.cpp  func.h  functionslist.inl  graphicsdevicelostexception.h  instance.cpp  instance.h  instanceextensionslist.cpp  instanceextensionslist.h  library-linux.cpp  library-win32.cpp  library.h  platform.cpp  platform.h  queue.cpp  queue.h  samplers.cpp  samplers.h  setlayoutsmanager.cpp  setlayoutsmanager.h  swapchain.cpp  swapchain.h  vk.h  vkhandle.cpp  vkhandle.h  vkutils.cpp  vkutils.h
src/world/: camera.cpp  camera.h  chunkbuildthread.cpp  chunkbuildthread.h  newregion.h  region.cpp  region.h  regionbuildthread.cpp  regionbuildthread.h  regiongeneratethread.cpp  regiongeneratethread.h  regioniothread.cpp  regioniothread.h  world.cpp  world.h  worldgenerator.cpp  worldgenerator.h  worldmanager.cpp  worldmanager.h
